--- a/index.html
+++ b/index.html
@@ -325,12 +325,7 @@
                 <div class="course_thumb">
                   <img src="images/ourcourse1.png" alt="" />
                   <div
-                    class="
-                      row
-                      align-items-center
-                      justify-content-center
-                      course_thumb_overlay
-                    "
+                    class="row align-items-center justify-content-center course_thumb_overlay"
                   >
                     <i class="fas fa-link"></i>
                   </div>
@@ -400,12 +395,7 @@
                 <div class="course_thumb">
                   <img src="images/ourcourse2.png" alt="" />
                   <div
-                    class="
-                      row
-                      align-items-center
-                      justify-content-center
-                      course_thumb_overlay
-                    "
+                    class="row align-items-center justify-content-center course_thumb_overlay"
                   >
                     <i class="fas fa-link"></i>
                   </div>
@@ -475,12 +465,7 @@
                 <div class="course_thumb">
                   <img src="images/ourcourse3.png" alt="" />
                   <div
-                    class="
-                      row
-                      align-items-center
-                      justify-content-center
-                      course_thumb_overlay
-                    "
+                    class="row align-items-center justify-content-center course_thumb_overlay"
                   >
                     <i class="fas fa-link"></i>
                   </div>
@@ -550,12 +535,7 @@
                 <div class="course_thumb">
                   <img src="images/Ethical Hacking.jpg" alt="" />
                   <div
-                    class="
-                      row
-                      align-items-center
-                      justify-content-center
-                      course_thumb_overlay
-                    "
+                    class="row align-items-center justify-content-center course_thumb_overlay"
                   >
                     <i class="fas fa-link"></i>
                   </div>
@@ -625,12 +605,7 @@
                 <div class="course_thumb">
                   <img src="images/3D Animation.jpg" alt="" />
                   <div
-                    class="
-                      row
-                      align-items-center
-                      justify-content-center
-                      course_thumb_overlay
-                    "
+                    class="row align-items-center justify-content-center course_thumb_overlay"
                   >
                     <i class="fas fa-link"></i>
                   </div>
@@ -700,12 +675,7 @@
                 <div class="course_thumb">
                   <img src="images/Our_Courses_page_04.png" alt="" />
                   <div
-                    class="
-                      row
-                      align-items-center
-                      justify-content-center
-                      course_thumb_overlay
-                    "
+                    class="row align-items-center justify-content-center course_thumb_overlay"
                   >
                     <i class="fas fa-link"></i>
                   </div>
@@ -1544,12 +1514,7 @@
       <div class="container">
         <div class="row">
           <div
-            class="
-              col-12 col-lg-4
-              text-center text-md-start text-white
-              mb-4 mb-lg-0
-              contact_left
-            "
+            class="col-12 col-lg-4 text-center text-md-start text-white mb-4 mb-lg-0 contact_left"
           >
             <div class="contact_logo mb-4">
               <a href="index.html"
@@ -1592,11 +1557,7 @@
             </div>
           </div>
           <div
-            class="
-              col-12 col-md-6 col-lg-4
-              text-center text-md-start text-white
-              contact_center
-            "
+            class="col-12 col-md-6 col-lg-4 text-center text-md-start text-white contact_center"
           >
             <div class="contact_header">
               <h4>Quick Links</h4>
@@ -1622,12 +1583,7 @@
             </div>
           </div>
           <div
-            class="
-              col-12 col-md-6 col-lg-4
-              text-center text-md-start text-white
-              mb-4
-              contact_right
-            "
+            class="col-12 col-md-6 col-lg-4 text-center text-md-start text-white mb-4 contact_right"
           >
             <div class="contact_header">
               <h4>Contact Information</h4>
@@ -1781,7 +1737,11 @@
       <div class="container">
         <div class="footer">
           <p class="text-white text-center py-3">
-            Copyright <i class="fas fa-copyright"></i> 2021. All rights by
+            Copyright <i class="fas fa-copyright"></i>
+            <script>
+              document.write(new Date().getFullYear());
+            </script>
+            . All rights by
             <span>GYAN</span>
           </p>
         </div>
