--- a/courses.html
+++ b/courses.html
@@ -160,12 +160,7 @@
                   <div class="course_thumb">
                     <img src="images/ourcourse1.png" alt="" />
                     <div
-                      class="
-                        row
-                        align-items-center
-                        justify-content-center
-                        course_thumb_overlay
-                      "
+                      class="row align-items-center justify-content-center course_thumb_overlay"
                     >
                       <i class="fas fa-link"></i>
                     </div>
@@ -180,12 +175,7 @@
                         <h5>Sujon Shaha</h5>
                       </div>
                       <div
-                        class="
-                          col-lg-4
-                          course_author_rating
-                          text-lg-end
-                          px-lg-0
-                        "
+                        class="col-lg-4 course_author_rating text-lg-end px-lg-0"
                       >
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -242,12 +232,7 @@
                   <div class="course_thumb">
                     <img src="images/ourcourse2.png" alt="" />
                     <div
-                      class="
-                        row
-                        align-items-center
-                        justify-content-center
-                        course_thumb_overlay
-                      "
+                      class="row align-items-center justify-content-center course_thumb_overlay"
                     >
                       <i class="fas fa-link"></i>
                     </div>
@@ -262,12 +247,7 @@
                         <h5>Sujon Shaha</h5>
                       </div>
                       <div
-                        class="
-                          col-lg-4
-                          course_author_rating
-                          text-lg-end
-                          px-lg-0
-                        "
+                        class="col-lg-4 course_author_rating text-lg-end px-lg-0"
                       >
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -324,12 +304,7 @@
                   <div class="course_thumb">
                     <img src="images/ourcourse3.png" alt="" />
                     <div
-                      class="
-                        row
-                        align-items-center
-                        justify-content-center
-                        course_thumb_overlay
-                      "
+                      class="row align-items-center justify-content-center course_thumb_overlay"
                     >
                       <i class="fas fa-link"></i>
                     </div>
@@ -344,12 +319,7 @@
                         <h5>Sujon Shaha</h5>
                       </div>
                       <div
-                        class="
-                          col-lg-4
-                          course_author_rating
-                          text-lg-end
-                          px-lg-0
-                        "
+                        class="col-lg-4 course_author_rating text-lg-end px-lg-0"
                       >
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -406,12 +376,7 @@
                   <div class="course_thumb">
                     <img src="images/Ethical Hacking.jpg" alt="" />
                     <div
-                      class="
-                        row
-                        align-items-center
-                        justify-content-center
-                        course_thumb_overlay
-                      "
+                      class="row align-items-center justify-content-center course_thumb_overlay"
                     >
                       <i class="fas fa-link"></i>
                     </div>
@@ -426,12 +391,7 @@
                         <h5>Sujon Shaha</h5>
                       </div>
                       <div
-                        class="
-                          col-lg-4
-                          course_author_rating
-                          text-lg-end
-                          px-lg-0
-                        "
+                        class="col-lg-4 course_author_rating text-lg-end px-lg-0"
                       >
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -488,12 +448,7 @@
                   <div class="course_thumb">
                     <img src="images/3D Animation.jpg" alt="" />
                     <div
-                      class="
-                        row
-                        align-items-center
-                        justify-content-center
-                        course_thumb_overlay
-                      "
+                      class="row align-items-center justify-content-center course_thumb_overlay"
                     >
                       <i class="fas fa-link"></i>
                     </div>
@@ -508,12 +463,7 @@
                         <h5>Sujon Shaha</h5>
                       </div>
                       <div
-                        class="
-                          col-lg-4
-                          course_author_rating
-                          text-lg-end
-                          px-lg-0
-                        "
+                        class="col-lg-4 course_author_rating text-lg-end px-lg-0"
                       >
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -570,12 +520,7 @@
                   <div class="course_thumb">
                     <img src="images/Our_Courses_page_04.png" alt="" />
                     <div
-                      class="
-                        row
-                        align-items-center
-                        justify-content-center
-                        course_thumb_overlay
-                      "
+                      class="row align-items-center justify-content-center course_thumb_overlay"
                     >
                       <i class="fas fa-link"></i>
                     </div>
@@ -590,12 +535,7 @@
                         <h5>Sujon Shaha</h5>
                       </div>
                       <div
-                        class="
-                          col-lg-4
-                          course_author_rating
-                          text-lg-end
-                          px-lg-0
-                        "
+                        class="col-lg-4 course_author_rating text-lg-end px-lg-0"
                       >
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -656,12 +596,7 @@
       <div class="container">
         <div class="row">
           <div
-            class="
-              col-12 col-lg-4
-              text-center text-md-start text-white
-              mb-4 mb-lg-0
-              contact_left
-            "
+            class="col-12 col-lg-4 text-center text-md-start text-white mb-4 mb-lg-0 contact_left"
           >
             <div class="contact_logo mb-4">
               <a href="index.html"
@@ -704,11 +639,7 @@
             </div>
           </div>
           <div
-            class="
-              col-12 col-md-6 col-lg-4
-              text-center text-md-start text-white
-              contact_center
-            "
+            class="col-12 col-md-6 col-lg-4 text-center text-md-start text-white contact_center"
           >
             <div class="contact_header">
               <h4>Quick Links</h4>
@@ -734,12 +665,7 @@
             </div>
           </div>
           <div
-            class="
-              col-12 col-md-6 col-lg-4
-              text-center text-md-start text-white
-              mb-4
-              contact_right
-            "
+            class="col-12 col-md-6 col-lg-4 text-center text-md-start text-white mb-4 contact_right"
           >
             <div class="contact_header">
               <h4>Contact Information</h4>
@@ -893,7 +819,11 @@
       <div class="container">
         <div class="footer">
           <p class="text-white text-center py-3">
-            Copyright <i class="fas fa-copyright"></i> 2021. All rights by
+            Copyright <i class="fas fa-copyright"></i>
+            <script>
+              document.write(new Date().getFullYear());
+            </script>
+            . All rights by
             <span>GYAN</span>
           </p>
         </div>
