--- a/events.html
+++ b/events.html
@@ -758,12 +758,7 @@
       <div class="container">
         <div class="row">
           <div
-            class="
-              col-12 col-lg-4
-              text-center text-md-start text-white
-              mb-4 mb-lg-0
-              contact_left
-            "
+            class="col-12 col-lg-4 text-center text-md-start text-white mb-4 mb-lg-0 contact_left"
           >
             <div class="contact_logo mb-4">
               <a href="index.html"
@@ -806,11 +801,7 @@
             </div>
           </div>
           <div
-            class="
-              col-12 col-md-6 col-lg-4
-              text-center text-md-start text-white
-              contact_center
-            "
+            class="col-12 col-md-6 col-lg-4 text-center text-md-start text-white contact_center"
           >
             <div class="contact_header">
               <h4>Quick Links</h4>
@@ -836,12 +827,7 @@
             </div>
           </div>
           <div
-            class="
-              col-12 col-md-6 col-lg-4
-              text-center text-md-start text-white
-              mb-4
-              contact_right
-            "
+            class="col-12 col-md-6 col-lg-4 text-center text-md-start text-white mb-4 contact_right"
           >
             <div class="contact_header">
               <h4>Contact Information</h4>
@@ -995,7 +981,11 @@
       <div class="container">
         <div class="footer">
           <p class="text-white text-center py-3">
-            Copyright <i class="fas fa-copyright"></i> 2021. All rights by
+            Copyright <i class="fas fa-copyright"></i>
+            <script>
+              document.write(new Date().getFullYear());
+            </script>
+            . All rights by
             <span>GYAN</span>
           </p>
         </div>
