Added script to show current year

--- a/teachers.html
+++ b/teachers.html
@@ -581,7 +581,11 @@
       <div class="container">
         <div class="footer">
           <p class="text-white text-center py-3">
-            Copyright <i class="fas fa-copyright"></i> 2021. All rights by
+            Copyright <i class="fas fa-copyright"></i>
+            <script>
+              document.write(new Date().getFullYear());
+            </script>
+            . All rights by
             <span>GYAN</span>
           </p>
         </div>
